--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nuclearWinters/scriptsOCR#readme",
   "dependencies": {
+    "csv-parser": "^2.3.2",
     "csv-writer": "^1.6.0",
     "moment": "^2.24.0"
   }
